.infra/chart/templates /service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-deployment
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: spring-deployment
